# trashdump

./: .#recyclebin.py  .gitignore  .trashdump_script.py.swp  MANIFEST.in  README.md  compost.py  dump.py  dump.py~  ffa.py  fitfuncs  fitfuncs.py  fitfuncs.py~  lightcurves.py  lightcurves.py~  pyproject.toml  recycle.py  recycle.py~  recyclebin.py  recyclebin.py~  ses.py  ses.py~  setup.py  test_bit8.py  transit_search.py  transit_search.py~  transitfit.py  transitfit.py~  trashdump_script.py  trashdump_script.py~  utils.py  utils.py~
.spyproject/config/: workspace.ini
.spyproject/config/backups/: workspace.ini.bak
backups/: stellar_pipeline.py
data/meta/: limb_coeffs.h5
trashdump.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
